--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "phpmailer/phpmailer": "^6.9",
         "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
